<resources>
    <string name="app_name">하루살이</string>

    <string name="money_unit_kr">원</string>

    <string name="add_statement_title">기록추가</string>
    <string name="amount_title">금액</string>
    <string name="memo_title">내역</string>
    <string name="date_title">날짜</string>

    <string name="btn_text_in">들어온 돈</string>
    <string name="btn_text_out">나간 돈</string>
    <string name="btn_text_next">다음</string>
    <string name="btn_text_pre">이전</string>
    <string name="btn_text_done">완료</string>
    <string name="btn_text_ok">확인</string>
    <string name="btn_text_store">저장하기</string>
    <string name="btn_text_edit">수정하기</string>
    <string name="btn_text_start">시작하기</string>

    <string name="memo_hint_date">날짜를 선택해주세요.</string>
    <string name="memo_hint_text">내역을 입력해주세요.</string>

    <string name="text_flex">세상에..완전 체고체고~!</string>
    <string name="text_clap">굳굳, 이대로만 계속 가다오~</string>
    <string name="text_default">오늘은 절약해서 파면을 면해보자!</string>
    <string name="text_embarrassed">어휴 이게 무슨일이야..</string>
    <string name="text_cry">안돼, 이제 그만써!!</string>
    <string name="text_volcano">아이구...파산났네 났어~!</string>
    
    <string name="text_volcano_widget">파산났네 났어~!</string>
    <string name="text_cry_widget">안돼, 이제 그만써!!</string>
    <string name="text_embarrassed_widget">이게 무슨일이야..</string>
    <string name="text_clap_widget">이대로만 가다오~</string>
    <string name="text_flex_widget">완전 체고체고~!</string>

    <string name="title_onboarding1">이번 달은 절대 텅장 No!</string>
    <string name="title_onboarding2">일일 생활비 자동 계산</string>
    <string name="title_onboarding3">소비 실시간 코멘트</string>
    <string name="text_onboarding1">자꾸 텅장이 되는 미생들을 위한\n본격 생활비 지킴이 서비스</string>
    <string name="text_onboarding2">한 달 예산을 입력하면,\n일일 생활비를 알아서 계산해줍니다.</string>
    <string name="text_onboarding3">절약 중이라면 칭찬을,\n과소비 중이라면 지적해줍니다.</string>
    <string name="empty_main_title">이번 달 예산을\n정해주세요!</string>
    <string name="empty_main_speech_bubble_text">이번 달 얼마로 살아볼까요?</string>
    <string name="budget_setting">예산설정</string>
    <string name="dialog_reset_data_title">지금까지 기록한 모든 정보가 사라지고\n기록 복구가 불가능합니다.\n정말 초기화 하시겠어요?</string>
    <string name="dialog_reset_data_complete_button">네, 초기화 합니다.</string>
    <string name="dialog_edit_budget_date_title">오늘은 %d일입니다.\n%d일로 시작일을 수정합니다.\n수정 후에는 새롭게 한 달 기준으로\n하루 생활비가 책정됩니다.</string>
    <string name="dialog_edit_budget_date_complete_button">%d일로 시작</string>
    <string name="dialog_edit_budget_date_error">시작일이 오늘과 같습니다.</string>

    <string name="text_used">이번 달 사용 금액</string>

    <string name="appwidget_d_day">D-%d</string>
    <string name="appwidget_remaining_money">%s원 남음</string>

    <string name="appwidget_refresh_toast">정보를 새로 불러오고 있습니다.</string>
    <string name="ACTION_BTN_CLICK">appwidget_action_btn_click</string>
</resources>