<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.nexters.zzallang.harusal2.ui.statement.register.AddInputViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.statement.AddInputFragment'">

        <RadioGroup
            android:id="@+id/statement_type"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/btn_statement_out"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_btn_left"
                android:button="@android:color/transparent"
                android:checked="true"
                android:text="@string/btn_text_out"
                android:textAlignment="center"
                android:textColor="@color/btn_text_color"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@id/btn_statement_in" />

            <RadioButton
                android:id="@+id/btn_statement_in"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_btn_right"
                android:button="@android:color/transparent"
                android:text="@string/btn_text_in"
                android:textAlignment="center"
                android:textColor="@color/btn_text_color"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@id/btn_statement_out" />
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_statement_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statement_type">

            <EditText
                android:id="@+id/edit_statement_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="0"
                android:maxLength="7"
                android:text="@={vm.statementAmount}"
                android:textColor="@color/default_txt"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_statement_unit"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_statement_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit_kr"
                android:textColor="@color/disable_txt"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_statement_amount"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{vm.convertedAmount}"
            android:textColor="@color/disable_txt"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_statement_amount" />

        <com.nexters.zzallang.harusal2.keyboard.NumericKeyboard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            app:field="@id/edit_statement_amount"
            app:fieldMaxLength="9"
            app:layout_constraintBottom_toTopOf="@id/btn_statement_next" />

        <Button
            android:id="@+id/btn_statement_next"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/btn_black"
            android:text="@string/btn_text_next"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
