<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.nexters.zzallang.harusal2.ui.statement.edit.StatementEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_statement"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_statement_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back_24">

            </ImageButton>

            <ImageButton
                android:id="@+id/btn_statement_delete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginRight="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icn_list_delete_24">

            </ImageButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_container_statement"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/header_statement"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_statement_edit_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                android:text="@string/date_title"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/colorGray"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_statement_edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_statement_edit_date_title"
                android:layout_marginTop="12dp"
                android:padding="17dp"
                android:background="@drawable/selector_edit">

                <TextView
                    android:id="@+id/edit_statement_edit_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@{vm.statementDate}"
                    android:textColor="@color/colorDarkBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/icn_date_24">

                </ImageView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_statement_edit_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_statement_edit_date"
                android:layout_marginTop="40dp"
                android:text="@string/amount_title"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/colorGray">

            </TextView>

            <RadioGroup
                android:id="@+id/btn_group_statement_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/tv_statement_edit_amount_title"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/btn_edit_type_out"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_left"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:text="@string/btn_text_out"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textColor="@color/btn_text_color">

                </RadioButton>
                <RadioButton
                    android:id="@+id/btn_edit_type_in"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_right"
                    android:text="@string/btn_text_in"
                    android:textAlignment="center"
                    android:textStyle="normal"
                    android:textSize="14sp"
                    android:textColor="@color/btn_text_color"
                    android:button="@android:color/transparent"
                    >

                </RadioButton>

            </RadioGroup>

            <EditText
                android:id="@+id/edit_statement_edit_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_group_statement_edit"
                android:layout_marginTop="8sp"
                android:background="@drawable/selector_edit"
                android:padding="17dp"
                android:text="@={vm.statementAmount}"
                android:textColor="@color/colorDarkBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                >

            </EditText>

            <TextView
                android:id="@+id/tv_statement_edit_memo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_statement_edit_amount"
                android:layout_marginTop="40dp"
                android:text="@string/memo_title"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/colorGray"/>

            <EditText
                android:id="@+id/edit_statement_edit_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_statement_edit_memo_title"
                android:layout_marginTop="8sp"
                android:background="@drawable/selector_edit"
                android:padding="17dp"
                android:text="@={vm.statementMemo}"
                android:textColor="@color/colorDarkBlack"
                android:textSize="16sp"
                android:textStyle="bold"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_statement_edit_done"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorBtnBlack"
            android:text="@string/btn_text_store"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            >

        </Button>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_statement_edit_keypad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="2dp"
            android:visibility="gone">

            <com.nexters.zzallang.harusal2.keyboard.NumericKeyboard
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/btn_statement_edit_keypad"
                android:background="@color/colorLightGray"
                app:field="@id/edit_statement_edit_amount"
                app:fieldMaxLength="9">

            </com.nexters.zzallang.harusal2.keyboard.NumericKeyboard>

            <Button
                android:id="@+id/btn_statement_edit_keypad"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/colorBtnBlack"
                android:text="@string/btn_text_ok"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>